# people-also-ask

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  build.sh  config.py  kubernetes-autoscaling.yml  kubernetes-deployment.yml  logging_config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: release-docker-image.yaml
deploy/: kubernetes-autoscaling.yml  kubernetes-recommender.yml  kubernetes-service.yml
people_also_ask/: app.py  config.py  constants.py  exceptions.py  google.py  parser.py  routes.py  tools.py
people_also_ask/logger/: logger.py
people_also_ask/request/: session.py
people_also_ask/swagger/: api.yaml
