[tool.poetry]
name = "people-also-ask"
version = "1.1.3"
description = ""
authors = ["Manuel Martin Morante <manuzombiesbf1@gmail.com>"]
readme = "README.md"
packages = [{include = "people_also_ask"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
uule-grabber = "^0.1.9"
pandas = "^2.1.3"
waitress = "^2.1.2"
connexion = {extras = ["flask"], version = "^3.0.2"}
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
paste = "^3.7.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"
random-user-agent = "^1.0.1"

[tool.poetry.scripts]
start = "main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
